<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/LinearLayoutStyle">

    <include layout="@layout/action_bar_app"/>

    <TextView
        android:id="@+id/titleForgotPassword"
        android:text="@string/forgot_title"
        style="@style/TitleStyle"/>

    <TextView
        android:id="@+id/descriptionForgotPassword"
        android:text="@string/forgot_description"
        style="@style/DescriptionStyle"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailForgotPassword"
        android:hint="@string/main_email_hint"
        android:inputType="textEmailAddress"
        style="@style/EditTextStyle"
        android:drawableLeft="@drawable/ic_account"/>

    <Button
        android:id="@+id/reset"
        android:text="@string/forgot_title"
        style="@style/ButtonStyle"/>

</LinearLayout>