<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_grey"
    android:orientation="vertical">
    <include layout="@layout/action_bar_app" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/scanqr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:padding="50dp"
            android:drawableTop="@drawable/ic_qr_scan"
            android:drawablePadding="10dp"
            android:text="@string/menu_qr_scan"
            />
        <Button
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:padding="50dp"
            android:drawableTop="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:text="@string/menu_search"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/areas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:padding="50dp"
            android:drawableTop="@drawable/ic_areas"
            android:drawablePadding="10dp"
            android:text="@string/menu_areas" />
        <Button
            android:id="@+id/equipments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:padding="50dp"
            android:drawableTop="@drawable/ic_equipments"
            android:drawablePadding="10dp"
            android:text="@string/menu_equipments" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <Button
            android:id="@+id/users"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginTop="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            android:background="@color/white"
            android:padding="50dp"
            android:drawableTop="@drawable/ic_users"
            android:drawablePadding="10dp"
            android:text="@string/menu_users"  />
    </LinearLayout>
</LinearLayout>